--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Garfield-Bot",
+  "name": "LyoNi-Bot",
   "version": "8.5.0",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "index.js",
