--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "ＧＡＲＦＩＥＬＤ  ＷＨＡＴＳＡＰＰ ＢＯＴ ｖ8.5",
-  "description": "ＦＲＯＭ ＮＯＩＺＥ ᴅᴇᴠᴇʟᴏᴘᴇʀꜱ (24×7 𝖡𝖮𝖳,𝖡𝗎𝗍𝗍𝗈𝗇 𝖡𝗈𝗍 🦋)",
+  "name": "L Y O N I  W H A T S A P P  B O T V8.5",
+  "description": "F R O M  S H A N G - C H I ᴅᴇᴠᴇʟᴏᴘᴇʀꜱ (24×7 𝖡𝖮𝖳,𝖡𝗎𝗍𝗍𝗈𝗇 𝖡𝗈𝗍 🦋)",
   "repository": "https://github.com/Zenoixnoize/GARFIELD-WHATSAPP-BOT-v8",
   "logo": "https://i.ibb.co/G2bpd2B/Pics-Art-22-03-26-14-51-06-509.png",
   "keywords": ["Garfield", "bot", "whatsapp bot", "ZENOI", "multi device"],
