--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "F R O M  S H A N G - C H I ᴅᴇᴠᴇʟᴏᴘᴇʀꜱ (24×7 𝖡𝖮𝖳,𝖡𝗎𝗍𝗍𝗈𝗇 𝖡𝗈𝗍 🦋)",
   "repository": "https://github.com/Zenoixnoize/GARFIELD-WHATSAPP-BOT-v8",
   "logo": "https://i.ibb.co/G2bpd2B/Pics-Art-22-03-26-14-51-06-509.png",
-  "keywords": ["Garfield", "bot", "whatsapp bot", "ZENOI", "multi device"],
+  "keywords": ["LyoNi", "bot", "whatsapp bot", "SHANGCHI", "multi device"],
   "buildpacks": [
     {
       "url": "heroku/nodejs"
